# scope

./: CMakeLists.txt  README.md  build.jam
.github/workflows/: ci.yml
conan/: conanfile.py
doc/: Jamfile  changelog.qbk  scope.qbk  scope_guards.qbk  unique_resource.qbk
include/boost/scope/: error_code_checker.hpp  exception_checker.hpp  fd_deleter.hpp  fd_resource.hpp  posix_fd_resource.hpp  scope_check.hpp  scope_exit.hpp  scope_fail.hpp  scope_final.hpp  scope_success.hpp  unique_fd.hpp  unique_posix_fd.hpp  unique_resource.hpp  unique_resource_fwd.hpp
include/boost/scope/detail/: compact_storage.hpp  config.hpp  decay_to_function_ref.hpp  footer.hpp  header.hpp  is_not_like.hpp  move_or_copy_assign_ref.hpp  move_or_copy_construct_ref.hpp  move_or_copy_ref.hpp
include/boost/scope/detail/type_traits/: conjunction.hpp  disjunction.hpp  void_t.hpp  (+6 more)
meta/: libraries.json
test/: CMakeLists.txt  Jamfile
test/common/: function_types.hpp
test/compile/: self_contained_header.cpp
test/compile_fail/: scope_check_noncopyable.cpp  scope_exit_noncopyable.cpp  scope_fail_noncopyable.cpp  scope_final_noncopyable.cpp  scope_final_nonmoveable.cpp  scope_success_noncopyable.cpp  unique_resource_non_deducible_def_res.cpp  unique_resource_noncopyable.cpp  unique_resource_ref_reset_rv.cpp
test/run/: defer_guard.cpp  scope_check.cpp  scope_exit.cpp  scope_fail.cpp  scope_final.cpp  scope_success.cpp  unique_fd.cpp  unique_posix_fd.cpp  unique_resource.cpp
test/test_cmake/: CMakeLists.txt  main.cpp
vcpkg/ports/boost-scope/: 1.83_compat.patch  portfile.cmake  vcpkg.json
